<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.noear</groupId>
        <artifactId>solon-parent</artifactId>
        <version>2.6.6-M1</version>
    </parent>

    <groupId>cn.murky</groupId>
    <artifactId>murky</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>murky-admin</module>
        <module>murky-tenant</module>
        <module>murky-library</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.30</lombok.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <skipTests>true</skipTests>
        <mybatis-flex.version>1.6.5</mybatis-flex.version>
        <HikariCP.verion>5.0.1</HikariCP.verion>
        <postgresql.verion>42.7.1</postgresql.verion>
        <dami.version>0.54</dami.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cn.murky</groupId>
                <artifactId>murky-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.murky</groupId>
                <artifactId>murky-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.murky</groupId>
                <artifactId>murky-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.murky</groupId>
                <artifactId>murky-flex</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--dami 依赖-->
            <dependency>
                <groupId>org.noear</groupId>
                <artifactId>dami-solon-plugin</artifactId>
                <version>${dami.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <!--日志依赖-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon.logging.simple</artifactId>
        </dependency>

        <!--单元测试 依赖-->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon-test-junit5</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <repositories>
        <repository>
            <id>tencent</id>
            <url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>